# claude-code-cleaner

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  i18n.rs  main.rs
src/cleaner/: mod.rs
src/model/: category.rs  settings.rs
src/ui/: categories.rs  cleaning.rs  dashboard.rs  mod.rs  preview.rs  projects.rs
src/ui/widgets/: mod.rs
